Edit bug ot constructor in JokeDecoder